--- a/overview/architecture-and-concepts/architecture-overview.mdx
+++ b/overview/architecture-and-concepts/architecture-overview.mdx
@@ -1,159 +1,150 @@
 ---
-title: "Architecture Overview"
-description: "An at-a-glance look at the high-level architecture of GoogleTest and GoogleMock, illustrating component interactions, data flow, and the integration of both test writing and mocking capabilities. Includes a Mermaid diagram to clarify system structure."
+title: "System Architecture Diagram"
+description: "Visualizes the primary building blocks of GoogleTest—including test runners, assertion engines, and reporting modules—alongside their relationships. Aids comprehension of how GoogleTest fits into a typical C++ project's testing lifecycle."
 ---
 
-# Architecture Overview
+# System Architecture Diagram
 
-## High-Level Architecture of GoogleTest and GoogleMock
+## Overview
 
-Welcome to the Architecture Overview—the place to gain a clear, high-level understanding of how GoogleTest and GoogleMock work together. This page illustrates the main components, their interactions, the overall data flow, and how the framework integrates test writing and mocking capabilities into a seamless developer experience.
+GoogleTest is a comprehensive C++ testing framework designed to integrate seamlessly into your software development lifecycle. The System Architecture Diagram page offers a visual guide to the primary components that constitute GoogleTest, illustrating how they interact to support test execution, assertion handling, and result reporting.
 
-### Why This Architecture Matters to You
-
-Understanding the architecture helps you grasp why GoogleTest is both powerful and intuitive. You’ll see how test execution, mock management, and expectation verification fit into an integrated system designed to help you write clean, maintainable, and reliable tests faster.
-
----
-
-## Core Components and Their Roles
-
-Below is an outline of the main components and their responsibilities within the GoogleTest and GoogleMock architecture:
-
-- **Test Framework Core**: Handles test discovery, execution, and reporting. This is where your test cases, defined using GoogleTest, live and run.
-
-- **Mock Object System**: Central to GoogleMock, this subsystem lets you define mock classes and methods, set behavioral expectations, and verify those expectations automatically.
-
-- **Matchers and Actions**: Reusable constructs to specify flexible argument matching and define actions for mock methods (such as returning values or invoking callbacks).
-
-- **Expectation Management**: Tracks expectations set by your code and automatically verifies them during test execution and object destruction.
-
-- **Default and Custom Behavior Handlers**: Facilitate default responses to uninteresting calls and support for custom user-defined matchers and actions.
+Understanding this architecture will provide you with insight into how GoogleTest operates behind the scenes, fostering confidence in the framework's robustness and guiding advanced users interested in extending or troubleshooting their test environment.
 
 ---
 
-## System Interaction and Data Flow
+## Core Components of GoogleTest Architecture
 
-The following scenario demonstrates a typical user workflow within this architecture:
+This section breaks down the main building blocks of the GoogleTest system, highlighting their roles and how they collaborate during a typical test run.
 
-1. **Test Initialization**: Your test program initializes GoogleTest and GoogleMock via the combined framework entry point.
+### 1. Test Runners
 
-2. **Test and Mock Instantiation**: Both GoogleTest test cases and GoogleMock mock objects are created.
+The Test Runner is the entry point of the testing process. It is responsible for:
 
-3. **Setting Expectations**: Using constructs such as `EXPECT_CALL()`, you define expectations on mock methods—specifying how methods should be called and what they should return.
+- Discovering and loading test cases within your codebase.
+- Handling command line arguments related to test execution.
+- Initiating the execution of individual tests or test suites.
 
-4. **Test Execution**: Your test code calls methods on mock objects and regular test fixtures.
+The test runner manages the overall orchestration and lifecycle of tests, including setup and teardown procedures.
 
-5. **Expectation Evaluation**: The mock system intercepts the method calls, matches them to expectations using matchers, executes predefined actions, and tracks invocation counts.
+### 2. Assertion Engine
 
-6. **Verification and Cleanup**: After test execution, GoogleMock automatically verifies that all expectations were met and reports failures if any discrepancies occur.
+Assertions are the core mechanism for verifying test conditions. The Assertion Engine:
+
+- Provides a rich set of assertion macros for common comparisons and checks.
+- Tracks assertion results, including successes, failures, and fatal errors.
+- Supports detailed output and diagnostic information on failures to facilitate debugging.
+
+By integrating assertions tightly with test execution, the engine enables immediate and informative feedback whenever expectations are unmet.
+
+### 3. Test Execution Framework
+
+This component manages the execution flow within tests:
+
+- Runs individual test methods.
+- Supports fixture setup and teardown routines.
+- Manages parameterized tests and typed tests.
+
+It ensures tests are isolated and run consistently, handling exceptions and errors gracefully.
+
+### 4. Reporting Modules
+
+Result reporting is vital for understanding test outcomes. GoogleTest's Reporting Modules:
+
+- Collect and format test outcomes, including passing tests, failures, and skips.
+- Support various output formats (such as XML, JSON, or plain text).
+- Integrate with Continuous Integration systems or external reporting tools.
+
+These modules provide clear and comprehensive summaries of test results, making it easier to assess software quality quickly.
+
+### 5. Extensions and Utilities
+
+GoogleTest architecture supports extensibility:
+
+- Plugins and user-defined event listeners can hook into the test lifecycle.
+- Utilities for test filtering, sharding, and retry mechanisms.
+- Facilities to integrate with mock objects (via gMock) for advanced testing strategies.
+
+This modular design allows users to tailor the test framework to complex and evolving testing needs.
 
 ---
 
-## Visual Overview of the Architecture
+## How It Fits Into Your Testing Workflow
+
+The System Architecture Diagram situates GoogleTest within the typical developer and CI environment:
 
 ```mermaid
 flowchart TD
-
-  subgraph User Code
-    TC[Test Cases]
-    MO[Mock Objects]
-  end
-
-  subgraph Testing Framework
-    Core[Test Framework Core]
-    MockSys[Mock Object System]
-    Matchers[Matchers & Actions]
-    ExpectMgr[Expectation Management]
-    Behavior[Default & Custom Behavior Handlers]
-  end
-
-  TC --> Core
-  Core --> MO
-  MO -->|Invoke Mock Methods| MockSys
-  MockSys -->|Use| Matchers
-  MockSys -->|Track| ExpectMgr
-  ExpectMgr -->|Check| Core
-  MockSys --> Behavior
-  Behavior --> MockSys
-
-  style Core fill:#f9f,stroke:#333,stroke-width:2px
-  style MockSys fill:#9fc,stroke:#333,stroke-width:2px
-  style Matchers fill:#ccf,stroke:#333,stroke-width:2px
-  style ExpectMgr fill:#fc9,stroke:#333,stroke-width:2px
-  style Behavior fill:#fcc,stroke:#333,stroke-width:2px
-
+  Developer["Developer Writes Tests"] -->|Build & Run| TestRunner["Test Runner"]
+  TestRunner -->|Runs| TestExecution["Test Execution Framework"]
+  TestExecution -->|Uses| AssertionEngine["Assertion Engine"]
+  TestExecution -->|Invokes| ReportingModule["Reporting Module"]
+  TestExecution --> Extensions["Extensions & Utilities"]
+  ReportingModule --> Developer
+  Extensions --> TestExecution
 ```
 
-This diagram illustrates:
-
-- Test Cases trigger the Test Framework Core to run tests.
-- The Test Framework creates and interacts with Mock Objects.
-- Mock Objects delegate method invocations to the Mock Object System.
-- The Mock Object System leverages Matchers and Actions to handle call argument matching and behavior.
-- Expectation Management keeps track of calls against expectations.
-- Default and Custom Behavior Handlers provide fallback behaviors and user extensions.
+- Developers write tests that are discovered and run by the Test Runner.
+- The Test Execution Framework runs each test, interleaving fixture management and invoking assertions.
+- Assertions validate the expected behavior.
+- Reporting Modules collect and relay results back to developers in real-time or via CI systems.
 
 ---
 
-## Integration of GoogleTest and GoogleMock
+## Practical Implications
 
-GoogleMock is tightly integrated with GoogleTest, enabling you to write tests that seamlessly combine state verification and interaction verification. This integration means:
+Understanding the architecture aids users in:
 
-- **Unified Test Execution**: Calling `RUN_ALL_TESTS()` executes both ordinary tests and mocks’ expectation verifications.
+- Diagnosing test failures and performance bottlenecks.
+- Extending GoogleTest by creating custom listeners or reporters.
+- Integrating GoogleTest smoothly with build systems and CI/CD workflows.
+- Utilizing gMock effectively to mock dependencies during test execution.
 
-- **Automatic Verification**: When a mock object is destroyed, GoogleMock automatically verifies expectations and reports failures via the GoogleTest mechanism.
-
-- **Consistent Reporting**: All test results, including mock expectation failures, appear consistently in GoogleTest output.
-
-- **Shared Setup and Teardown**: You can set up mocks and tests in fixtures that GoogleTest manages, ensuring smooth lifecycle handling.
-
----
-
-## Practical Example Use Case
-
-Imagine you have a service that depends on a database interaction. Using GoogleTest combined with GoogleMock:
-
-- You write a test case that sets expectations on a mock database interface for specific queries and transactions.
-
-- When your service code calls the mock, GoogleMock matches calls to expectations, returns predefined results, and counts call frequency.
-
-- After the test finishes, the framework verifies all interactions happened as expected, instantly alerting you to any missed or unexpected calls.
-
-This architecture guarantees that test failures pinpoint interaction mismatches, not just state inconsistencies.
+Knowledge of this layered structure empowers teams to leverage GoogleTest’s full potential and troubleshoot issues with clarity.
 
 ---
 
 ## Tips and Best Practices
 
-- **Set Expectations Before Exercising Code**: Always establish your mock expectations before calling the code under test to avoid undefined behavior.
+- **Structure your tests** thoughtfully to take full advantage of the fixture lifecycle.
+- **Leverage built-in reporters** or customize them to fit your project’s reporting needs.
+- **Use event listeners** to hook into the testing process for advanced logging or integration.
+- **Combine with gMock** to mock complex dependencies and verify interactions.
 
-- **Use Nice or Strict Mocks Thoughtfully**: `NiceMock` suppresses warnings about uninteresting calls, while `StrictMock` treats them as errors. Use according to testing needs.
-
-- **Leverage Default Actions**: Use `ON_CALL` to set default behavior for mocks to avoid verbose expectations.
-
-- **Manage Expectation Order**: Use sequences and `InSequence` objects to enforce call order where necessary.
-
-- **Delegate to Real or Fake Objects**: When useful, delegate default actions to real or fake implementations to combine behavior with interaction verification.
-
-- **Avoid Over-Specification**: Overly strict expectations can make tests brittle and harder to maintain.
-
-- **Inspect Verbose Output for Debugging**: Enable `--gmock_verbose=info` for detailed logs on mock invocation and expectation matching.
+Synchronization between these components ensures robust test execution and reliable feedback.
 
 ---
 
-## Getting Started with Architecture in Mind
+## Troubleshooting Common Issues
 
-To begin working within this architecture, refer to the Quickstart and Integration guides:
-
-- Start by understanding test project configuration and how to write your first test.
-- Learn how to define mock classes using `MOCK_METHOD` macros.
-- Explore how to set expectations and specify behaviors with `EXPECT_CALL`.
-- Familiarize yourself with the life-cycle of mocks and test cases.
-
-For complete setup and usage steps, visit the Getting Started section.
+| Issue                              | Possible Cause                             | Suggested Action                              |
+|----------------------------------|-------------------------------------------|-----------------------------------------------|
+| Tests not discovered             | Improper naming or missing test macros     | Check test naming conventions and includes    |
+| Assertions do not report details | Verbosity level too low                     | Increase logging verbosity (`--gtest_verbose`) |
+| Slow test runs                   | Heavy fixture setup/teardown, or nested mocks | Optimize fixture usage, profile tests          |
+| Test reports not generated       | Reporting module misconfiguration           | Ensure output paths and formats are correctly set |
 
 ---
 
-<Note>
-This architecture overview complements the detailed product introduction, value proposition, and feature description chapters available elsewhere in the documentation.
-</Note>
+## Getting Started Preview
+
+Ready to explore GoogleTest? Begin by:
+
+- Installing GoogleTest and integrating it into your build system.
+- Writing your first test case to observe the assertion and reporting flow.
+- Reviewing the [Writing Your First Test](https://google.github.io/googletest/primer.html) and [Feature Summary](../overview/feature-overview/feature-summary) pages next.
+
+By mastering the architecture, you position yourself to write efficient, maintainable, and extensible tests.
+
+---
+
+## Further Reading
+
+- [GoogleTest: What is GoogleTest?](../overview/product-intro-and-value/what-is-googletest)
+- [GoogleTest Feature Summary](../overview/feature-overview/feature-summary)
+- [Using Mocks in C++ Tests](../guides/core-workflows/using-mocks-in-tests)
+- [gMock Cheat Sheet](../docs/gmock_cheat_sheet.md)
+
+---
+
+<Source url="https://github.com/google/googletest" branch="main" paths={[{"path": "googlemock/include/gmock/gmock-spec-builders.h", "range": "1-594"},{"path": "googlemock/src/gmock-spec-builders.cc", "range": "1-277"}]} />
