--- a/overview/architecture-and-concepts/core-concepts-and-terminology.mdx
+++ b/overview/architecture-and-concepts/core-concepts-and-terminology.mdx
@@ -1,237 +1,178 @@
 ---
 title: "Core Concepts & Terminology"
-description: "Clarifies the core ideas, terms, and mental models users must know: tests, test cases, fixtures, assertions, matchers, mocks, and actions. Explains the philosophy and nomenclature underlying GoogleTest and GoogleMock."
+description: "Defines core domain terms such as test case, assertion, fixture, parameterized test, and death test. Illustrates each concept with concise descriptions, mapping them to the relevant source files and underscoring their practical importance."
 ---
 
 # Core Concepts & Terminology
 
-Understanding GoogleTest and GoogleMock begins with mastering the fundamental concepts, terms, and mental models that shape how you write, organize, and reason about your tests and mocks. This page clarifies key ideas such as tests, test cases, fixtures, assertions, matchers, mocks, and actions, as well as the underlying philosophy of GoogleTest and GoogleMock.
+Understanding the essential terms behind GoogleTest and GoogleMock (gMock) empowers you to write more effective and maintainable tests. This page defines the core domain concepts such as **test case**, **assertion**, **fixture**, **parameterized test**, and **death test** in concise, approachable terms. Each concept is illustrated with practical significance and mapped to the relevant source files, guiding you on where to explore further.
 
 ---
 
-## What Is a Test?
+## What Are Core Concepts in GoogleTest?
 
-A **test** is a program or piece of code that verifies that a part of your software behaves as expected. In GoogleTest,
+At its heart, GoogleTest helps you write C++ tests that verify the behavior of your code. It provides key abstractions that organize the tests and provide detailed feedback when things go wrong. Here's what you need to know:
 
-- A **test** corresponds to a test function, typically written using the `TEST` macro.
-- Tests are grouped into **test cases** (or test suites), which provide a logical grouping for related tests.
+- **Test Case**: A logical grouping of tests that share common setup or configuration. Each test case contains one or more test methods.
 
-A well-written test isolates one behavior or property and checks it rigorously, allowing quick identification when things go wrong.
+- **Test**: An individual unit test that exercises a specific piece of code, verifying expected outcomes using assertions.
 
-## Test Cases and Test Fixtures
+- **Assertion**: A statement that verifies a particular condition is true or false. If an assertion fails, the test fails with detailed diagnostics.
 
-- A **test case** (or test suite) is a collection of related tests grouped under a common name.
-- A **test fixture** lets you set up common objects and configurations shared by multiple tests in the test case.
+- **Test Fixture**: A class that sets up the environment for tests within a test case, providing shared objects or state.
 
-Example:
+- **Parameterized Test**: A family of tests that run the same test logic with different input parameters, enabling data-driven testing.
+
+- **Death Test**: A special test that verifies code behavior on fatal failures or crashes, ensuring your program fails as expected in extreme conditions.
+
+
+Each concept corresponds within the source code to designated files and APIs, forming the building blocks of your test writing and execution.
+
+
+## Why These Terms Matter
+
+By internalizing these concepts, you can craft tests that are:
+
+- **Well-organized**: Group related tests logically, avoiding duplication.
+- **Expressive**: Use assertions meaningfully to pinpoint failures.
+- **Efficient**: Leverage parameterized tests to maximize coverage with minimal code.
+- **Robust**: Include death tests to validate your program's handling of catastrophic situations.
+
+They form the vocabulary that bridges your intent and the framework's capabilities.
+
+
+## Core Domain Term Definitions
+
+### Test Case
+A test case is a named collection of tests, typically representing a component or feature under test. Test cases can share setup and teardown logic through test fixtures.
+
+**Example:**
+```cpp
+TEST(MathFunctions, HandlesZeroInput) {
+  ASSERT_EQ(Factorial(0), 1);
+}
+
+TEST(MathFunctions, HandlesPositiveInput) {
+  ASSERT_EQ(Factorial(5), 120);
+}
+```
+Here, `MathFunctions` is the test case grouping individual tests.
+
+### Test
+A single executable unit verifying a specific piece of functionality. Each test runs independently.
+
+### Assertion
+Assertions confirm the outcome of the code under test. GoogleTest provides rich assertion macros:
+- `EXPECT_`: Records failure but continues the test.
+- `ASSERT_`: Fails immediately and aborts the test.
+
+Example assertion:
+```cpp
+ASSERT_TRUE(IsPrime(7));
+EXPECT_EQ(GetMax({1, 2, 3}), 3);
+```
+
+### Test Fixture
+Test fixtures initialize and clean up shared test context, avoiding repetitive code. Declared as a C++ class inheriting `::testing::Test`.
 
 ```cpp
-class MyTestFixture : public ::testing::Test {
+class VectorTest : public ::testing::Test {
  protected:
+  std::vector<int> v;
+
   void SetUp() override {
-    // Common setup for each test
+    v = {1, 2, 3};
   }
-
-  void TearDown() override {
-    // Cleanup after each test
-  }
-
-  // Shared data members
-  MyClass obj_;
 };
 
-TEST_F(MyTestFixture, TestBehavior1) {
-  EXPECT_TRUE(obj_.DoSomething());
-}
-
-TEST_F(MyTestFixture, TestBehavior2) {
-  EXPECT_EQ(obj_.GetValue(), 42);
+TEST_F(VectorTest, SizeIsCorrect) {
+  EXPECT_EQ(v.size(), 3);
 }
 ```
 
-Using fixtures promotes test code reuse and clarity while isolating test-specific logic.
+The `VectorTest` fixture is reused across multiple tests.
 
-## Assertions: How Do I Verify Behavior?
-
-An **assertion** is a statement that verifies whether a condition holds true.
-
-GoogleTest provides macros such as `EXPECT_*` and `ASSERT_*` for assertions:
-
-- **EXPECT_*** assertions report failure but allow the test to continue.
-- **ASSERT_*** assertions abort the current test body upon failure.
-
-Common assertion types include:
-
-- `EXPECT_EQ(expected, actual)` — compares equality.
-- `EXPECT_TRUE(condition)`, `EXPECT_FALSE(condition)` — boolean checks.
-- `EXPECT_THROW(statement, ExceptionType)` — exception verification.
-
-You can also use matcher-based assertions, e.g., `EXPECT_THAT(value, matcher)`, to write expressive checks with flexible matching criteria.
-
-## Matchers: Flexible Argument and Value Matching
-
-**Matchers** are predicates used in mocks and assertions to specify expected argument values or check results. They enable flexible and readable tests.
-
-Examples of built-in matchers include:
-
-- `_` (wildcard matcher) — matches any value.
-- `Eq(value)` — exact equality.
-- `Ge(n)` — value greater than or equal to `n`.
-- `Not(matcher)` — negates a matcher.
-- `ElementsAre(...)` — matches container elements with specified matchers in order.
-
-Matchers support composition, parametrization, and you can write custom matchers to tailor the checking logic precisely.
+### Parameterized Test
+Enables running the same test logic over multiple inputs.
 
 ```cpp
-using ::testing::_;
-using ::testing::Ge;
-using ::testing::ElementsAre;
-EXPECT_CALL(mock_obj, Method(Ge(10), _));
-EXPECT_THAT(container, ElementsAre(1, _, 3));
+class IsEvenTest : public ::testing::TestWithParam<int> {};
+
+TEST_P(IsEvenTest, HandlesEvenNumbers) {
+  int n = GetParam();
+  EXPECT_EQ(n % 2, 0);
+}
+
+INSTANTIATE_TEST_SUITE_P(EvenValues, IsEvenTest, ::testing::Values(2, 4, 6, 8));
 ```
 
-## Mocks: Simulating Collaborators
+Parameterized tests increase coverage without code duplication.
 
-A **mock** is an object that simulates a collaborator’s behavior in a controlled way. It allows you to:
-
-- Set expectations on what methods should be called, how many times, with what arguments.
-- Specify the behavior of mocked methods (what they return, side effects, etc).
-- Verify that the code under test interacts correctly with its dependencies.
-
-GoogleMock lets you define mock classes via the `MOCK_METHOD` macro inside your mock class, automatically generating all the machinery needed.
-
-Example mock class:
+### Death Test
+Death tests check that code crashes or exits under expected fatal scenarios.
 
 ```cpp
-class MockFoo {
- public:
-  MOCK_METHOD(int, GetValue, (), ());
-  MOCK_METHOD(void, SetValue, (int val), ());
-};
-```
-
-By setting expectations with `EXPECT_CALL` and default behaviors with `ON_CALL`, you gain fine-grained control over how the mock behaves.
-
-## Actions: What Happens When Mocks Are Called?
-
-An **action** defines what a mock method does when it is invoked. It can:
-
-- Return a specific value.
-- Invoke a user-defined function or lambda.
-- Save arguments for later inspection.
-- Throw an exception.
-- Perform side effects (e.g., modifying output parameters).
-
-Example:
-
-```cpp
-EXPECT_CALL(mock, GetValue())
-    .WillOnce(Return(42))
-    .WillRepeatedly(Return(0));
-
-EXPECT_CALL(mock, SetValue(_))
-    .WillOnce(Invoke([](int val) { std::cout << "SetValue called with " << val << std::endl; }));
-```
-
-Actions work seamlessly with expectations, allowing your tests to simulate realistic behaviors while capturing interactions.
-
-## Philosophical Foundations
-
-At its core, GoogleTest provides a framework for writing **state-based** tests: verifying observable outputs and states.
-
-GoogleMock extends this to **interaction-based** testing, focusing on verifying interactions between objects.
-
-Together, they let you write tests that are both comprehensive and maintainable, catching regressions early and making the design explicit and testable.
-
-## Terminology Summary
-
-| Term           | Description                                                           |
-|----------------|-----------------------------------------------------------------------|
-| Test           | A function verifying specific software behavior.                     |
-| Test Case (Suite) | A grouping of related tests sharing setup/teardown.                |
-| Test Fixture   | An environment where tests share common setup and data.              |
-| Assertion     | A statement verifying a condition in a test.                         |
-| Matcher       | A predicate that evaluates function arguments or values.             |
-| Mock          | A test double that simulates the behavior of a collaborator.         |
-| Expectation  | A specification of how a mock method should be called.                |
-| Action       | Defines what a mock method does when invoked.                         |
-
-
----
-
-## Practical Workflow
-
-Consider this typical user flow:
-
-1. Define mocks with `MOCK_METHOD` in mock classes representing your dependencies.
-2. Use `EXPECT_CALL` to set expectations (how mocks should be called).
-3. Use `ON_CALL` to define default behavior for mocked methods.
-4. Write tests that exercise the code under test, which uses mocks.
-5. Let GoogleMock verify the expectations automatically after test execution.
-
-This structured approach makes tests easier to write, reduces brittleness, and improves clarity of test intent.
-
-## Additional Tips
-
-- Use `_` matcher when the exact argument value is not critical.
-- Use sequences (`InSequence` or explicit `Sequence` objects) to enforce call order.
-- Prefer `ON_CALL` to specify default behaviors and `EXPECT_CALL` only to specify calls you want to verify.
-- Utilize matcher combinators (`AllOf`, `AnyOf`, `Not`, etc.) for complex conditions.
-- Consider using `NiceMock` to suppress warnings for uninteresting calls, and `StrictMock` to enforce stricter behavior.
-
----
-
-For a deeper dive, see related guides on [Mocking Basics](https://github.com/google/googletest/blob/main/docs/gmock_for_dummies.md), the [Mocking Reference](https://github.com/google/googletest/blob/main/docs/reference/mocking.md), and the [gMock Cookbook](https://github.com/google/googletest/blob/main/docs/gmock_cook_book.md).
-
-
----
-
-### Diagram: Basic Flow of Mocking in GoogleMock
-
-```mermaid
-flowchart TD
-  A[Define Mock Class with MOCK_METHOD] --> B[Create Mock Objects in Tests]
-  B --> C[Set Expectations with EXPECT_CALL]
-  B --> D[Set Default Behavior with ON_CALL]
-  C --> E[Exercise Code That Uses Mocks]
-  D --> E
-  E --> F[Mock Method Called]
-  F --> G{Does Call Match Any Expectation?}
-  G -- Yes --> H[Perform Specified Action in Expectation]
-  G -- No --> I{Is Call Uninteresting?}
-  I -- Yes --> J[Perform Default Action or Warn/Allow/Fail]
-  I -- No --> K[Report Unexpected Call Failure]
-  H --> L[Verify Expectations on Test Completion]
-```
-
----
-
-### Code Example: Expectation with Matchers and Actions
-
-```cpp
-using ::testing::_;
-using ::testing::Return;
-using ::testing::AtLeast;
-
-class MockCalculator {
- public:
-  MOCK_METHOD(int, Add, (int a, int b), ());
-};
-
-TEST(CalculatorTest, AddsPositiveNumbers) {
-  MockCalculator mock_calc;
-
-  // Expect Add to be called at least once with first argument positive, second any.
-  EXPECT_CALL(mock_calc, Add(::testing::Gt(0), _))
-      .Times(AtLeast(1))
-      .WillRepeatedly(Return(42));
-
-  int sum = mock_calc.Add(10, 1);  // returns 42
-  EXPECT_EQ(sum, 42);
+TEST(FooDeathTest, DiesOnNullptr) {
+  EXPECT_DEATH(Foo(nullptr), "null pointer");
 }
 ```
 
----
+This verifies exact failure behavior, ensuring reliability in extreme cases.
 
-### Summary
-This page arms you with a solid grasp of the foundational concepts underlying GoogleTest and GoogleMock. By understanding these core terms and usage patterns, you’re positioned to write effective, maintainable, and expressive C++ tests that leverage the full power of the framework.
+
+## Mapping Concepts to Source Files
+
+Each core concept is supported and implemented through specific components and source files:
+
+| Concept            | Typical Source Files / Locations       | Notes                                                  |
+|--------------------|--------------------------------------|--------------------------------------------------------|
+| Test Case & Test   | `test/gtest.h`, `test/gtest.cc`       | Declaration macros like `TEST`, `TEST_F`                 |
+| Assertions         | `assertions.h`, `assertions.cc`       | `ASSERT_*`, `EXPECT_*` macros and helper functions       |
+| Test Fixtures      | `test/gtest.h`, `test/gtest.cc`       | `::testing::Test` class and overrides                    |
+| Parameterized Tests| `test/gtest-param-test.h`              | Support classes like `TestWithParam<>`                    |
+| Death Tests        | `test/gtest-death-test.h`              | Specialized mechanisms to spawn subprocesses and verify  |
+
+Meanwhile, GoogleMock (gMock) extends these concepts to mocking C++ classes:
+
+| Concept         | Typical Source Files                 | Notes                                                |
+|-----------------|----------------------------------|------------------------------------------------------|
+| Mock Classes    | `gmock/gmock.h`, `gmock/gmock-spec-builders.h` | Macros for mock method declarations `MOCK_METHOD`   |
+| Setting Expectations | `gmock/gmock.h`, `gmock/gmock-spec-builders.h`  | `EXPECT_CALL`, modifiers like `.Times()`, `.WillOnce()` |
+| Matchers        | `gmock/gmock-matchers.h`          | Argument matching for flexible checking                |
+| Actions         | `gmock/gmock-actions.h`           | Control mock method behaviors                           |
+| Strictness Levels| `gmock/gmock-nice-strict.h`       | `NiceMock`, `StrictMock`, `NaggyMock` wrappers         |
+
+
+## Practical Importance of Understanding Core Concepts
+
+Imagine you want to validate a sorting function. Knowing core concepts helps you:
+
+1. Group related tests in a test case `SortingFunctions`.
+2. Use a test fixture to reuse a dataset across tests.
+3. Write assertions to verify sorted order.
+4. Employ parameterized tests to run against various input sizes and types.
+5. Write mocks to simulate dependencies for integration tests.
+
+Without understanding these terms, you may miss critical capabilities or write brittle tests.
+
+
+## Troubleshooting Common Pain Points
+
+- **Confusing a test case with a test:** Remember a test case is a collection; tests are individual.
+- **Skipping fixture setup:** Leads to repetitive initialization and potential errors.
+- **Overriding expectations after calls:** Always declare expectations before exercising mocks.
+- **Misusing `EXPECT_` vs `ASSERT_`:** Use `ASSERT_` when further test logic depends on validated conditions.
+
+
+## Next Steps
+
+With these definitions in mind, you can confidently proceed to:
+
+- [Getting Started with GoogleTest](../guides/core-workflows/getting-started-gtest) to learn how to apply these concepts.
+- [Writing and Structuring Effective Tests](../guides/core-workflows/writing-effective-tests) for practical techniques.
+- [Mocking Objects with gMock](../reference/mocking.md) to leverage powerful mocking capabilities.
+
+
+<Tip>
+Understanding these core terms is foundational. They enable you to structure tests clearly, diagnose problems swiftly, and harness the full power of GoogleTest and GoogleMock.
+</Tip>
